# voda-septik

./: .envrc  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
components/config_store/: CMakeLists.txt  config_store.cpp
components/config_webapp/: CMakeLists.txt  config_webapp.cpp  config_webapp.h
components/network_core/: README.md  (+6 more)
docs/: logging.md  ota.md
firmware/: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
hardware/: #auto_saved_files#  .gitignore  0martin.bak  0martin.kicad_sym  Untitled.csv  Voda septik.csv  Voda septik.kicad_pcb  Voda septik.kicad_pro  Voda septik.kicad_sch  Voda septik.kicad_sch-bak  _autosave-Voda septik.kicad_pcb  _autosave-Voda septik.kicad_sch  fp-info-cache  fp-lib-table  martin.bak  martin.kicad_sym  sym-lib-table
main/: CMakeLists.txt  adc_shared.cpp  adc_shared.h  app-config.cpp  app-config.h  blikaniled.cpp  boot_button.cpp  debug_mqtt.h  flash_monotonic_counter.cpp  hladina-demo.c  hladina-demo.cpp  hladina-demo.h  hladina.cpp  hladina.h  lcd-demo.c  lcd-demo.cpp  lcd.c  lcd.cpp  mqtt_commands.cpp  mqtt_commands.h  mqtt_ha_discovery.cpp  mqtt_ha_discovery.h  mqtt_init.cpp  mqtt_init.h  mqtt_publish.h  mqtt_publisher_task.cpp  mqtt_publisher_task.h  mqtt_topics.cpp  mqtt_topics.h  network_config.cpp  network_config.h  network_event_bridge.cpp  network_init.cpp  network_init.h  network_mqtt_config.h  network_state_machine.cpp  network_state_machine.h  objem.cpp  objem.h  ota_manager.cpp  (+34 more)
tools/: clear_retained_cmds.sh  mqtt_cmd_cli.sh  mqtt_log_level_cli.py  ota_flow_cli.sh  zalevaci
(+95 files in other folders)
